--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "@nestjs/cli": "^10.1.18",
     "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^10.2.6",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.90",
+    "@swc/jest": "^0.2.29",
     "@types/express": "^4.17.18",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.8.0",
@@ -63,7 +66,7 @@
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+      "^.+\\.(t|j)s?$": ["@swc/jest"]
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
